--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^3.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laraveldaily/laravel-invoices": "3.0",
         "livewire/livewire": "^2.11"
     },
     "require-dev": {
